Account for multiple Xlog options.